--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-quarkus.application.name=pdf-esig
+quarkus.application.name=pdfesig
 
 #for JWT validation
 mp.jwt.verify.publickey.location=${JWKS_URL:https://auth.globalid.dev/realms/globalid/protocol/openid-connect/certs}
@@ -10,12 +10,12 @@ quarkus.log.console.json=true
 
 # DB
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=pdfesig
+quarkus.datasource.username=wallet_banks
 quarkus.hibernate-orm.log.queries-slower-than-ms=150
 quarkus.hibernate-orm.log.jdbc-warnings=true
 quarkus.liquibase.migrate-at-start=true
 
-
+pdfesig.upload-path=${UPLOAD_PATH:/tmp}
 
 # Dev
 %dev.quarkus.http.port=8080
