--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
         <groupId>id.global</groupId>
         <artifactId>microservice-parent</artifactId>
         <version>10.2</version>
-        <relativePath />
+        <relativePath>master-pom.xml</relativePath>
     </parent>
 
     <groupId>id.global.pdfesig</groupId>
