--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,10 +19,10 @@ jobs:
         include:
           - name: "JVM"
             dockerfile: src/main/docker/Dockerfile.jvm
-            image: ghcr.io/${{ github.repository_owner }}/pdfesig
+            image: ghcr.io/${{ github.repository_owner }}/pdfesign
           # - name: "Native"
           #   dockerfile: src/main/docker/Dockerfile.multistage
-          #   image: ghcr.io/${{ github.repository_owner }}/pdfesig-native
+          #   image: ghcr.io/${{ github.repository_owner }}/pdfesign-native
     concurrency:
       group: "${{ github.workflow }}-${{ github.ref }}-${{ matrix.name }}"
       cancel-in-progress: false
