--- a/src/main/docker/Dockerfile.jvm
+++ b/src/main/docker/Dockerfile.jvm
@@ -75,7 +75,7 @@
 #   accessed directly. (example: "foo.example.com,bar.example.com")
 #
 ###
-FROM registry.access.redhat.com/ubi8/openjdk-17:1.11
+FROM eclipse-temurin:21-jre-ubi9-minimal
 
 ENV LANG='en_US.UTF-8' LANGUAGE='en_US:en'
 
