--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -72,6 +72,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{matrix.image}}:latest
+          #cache-from: type=registry,ref=${{matrix.image}}:latest
           cache-to: type=inline
 
