--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,53 +1,20 @@
-name: Docker image
+name: Build and push image
 
 on:
   push:
-    branches:
-      - main
-      - master
-      - feat-*
     tags:
-      - v*
+      - '**'
+
 jobs:
-  build-images:
+  push_to_registries:
+    name: Docker image
     runs-on: ubuntu-latest
     permissions:
-      contents: read
       packages: write
-    strategy:
-      matrix:
-        include:
-          - name: "JVM"
-            dockerfile: src/main/docker/Dockerfile.jvm
-            image: ghcr.io/${{ github.repository_owner }}/pdfesign
-          # - name: "Native"
-          #   dockerfile: src/main/docker/Dockerfile.multistage
-          #   image: ghcr.io/${{ github.repository_owner }}/pdfesign-native
-    concurrency:
-      group: "${{ github.workflow }}-${{ github.ref }}-${{ matrix.name }}"
-      cancel-in-progress: false
-    name: Docker image ${{ matrix.name }}
+      contents: read
     steps:
-      - name: Checkout repository
+      - name: Check out the repo
         uses: actions/checkout@v4
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: maven
-
-      - name: Build project
-        shell: bash
-        run: mvn $MAVEN_CLI_OPTS package $MAVEN_OPS
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MAVEN_OPS: "-Dmaven.test.skip=true -Dtest.skip.docker=true"
-          MAVEN_CLI_OPTS: "--batch-mode --errors --fail-at-end --show-version -DinstallAtEnd=true -ntp -Dno-format -Dci"
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -60,21 +27,26 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{matrix.image}}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=tag
-            type=sha,format=long
-            type=raw,latest
+          images: ghcr.io/${{ github.repository }}
 
-      - name: Build and push Docker image
+      - uses: actions/checkout@v4
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Maven Verify
+        run: mvn --batch-mode --update-snapshots verify
+
+      - name: Maven Package
+        run: mvn package
+
+      - name: Build and push Docker images
         uses: docker/build-push-action@v6
         with:
           context: .
-          file: ${{ matrix.dockerfile }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          #cache-from: type=registry,ref=${{matrix.image}}:latest
-          cache-to: type=inline
-
+          file: ./src/main/docker/Dockerfile.jvm
