--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,35 @@ mp.jwt.verify.issuer=${JWT_ISSUER:https://auth.globalid.dev/realms/globalid}
 quarkus.log.console.json=true
 %dev,%stg.quarkus.log.console.json=false
 
+
+quarkus.http.auth.session.encryption-key=VRscjQM9qPoAZbZ4
+quarkus.oidc.enabled=true
+quarkus.oidc.auth-server-url=https://auth.globalid.dev/realms/globalid
+quarkus.oidc.client-id=invalid-id
+quarkus.oidc.credentials.secret=invalid-secret
+quarkus.oidc.application-type=web-app
+quarkus.oidc.authentication.scopes=openid
+quarkus.oidc.authentication.cookie-path=/
+quarkus.oidc.token-state-manager.session-enabled=true
+quarkus.oidc.token-state-manager.state-serializer=quarkus.oidc.token.state-serializer.jwt
+quarkus.http.auth.permission.authenticated.paths=/web/*
+quarkus.http.auth.permission.authenticated.policy=authenticated
+quarkus.oidc.logout.path=/web/logout
+
+quarkus.oidc.discovery-enabled=false
+quarkus.oidc.authorization-path=/protocol/openid-connect/auth
+quarkus.oidc.token-path=/protocol/openid-connect/token
+quarkus.oidc.jwks-path=/protocol/openid-connect/certs
+quarkus.oidc.user-info-path=/protocol/openid-connect/userinfo
+quarkus.oidc.introspection-path=/protocol/openid-connect/token/introspect
+quarkus.oidc.end-session-path=/protocol/openid-connect/logout
+
+quarkus.qute.base-path=/templates
+quarkus.qute.template-suffix=html
+
 # DB
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=wallet_banks
+quarkus.datasource.username=pdfesig
 quarkus.hibernate-orm.log.queries-slower-than-ms=150
 quarkus.hibernate-orm.log.jdbc-warnings=true
 quarkus.liquibase.migrate-at-start=true
